--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.2.0
   flutter_svg: ^2.0.17
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
