--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.17
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  provider: ^6.1.5
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
